--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@types/node": "^18.11.10",
     "rimraf": "^3.0.2",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "source-map-support": "^0.5.21"
   }
 }
